finished backend for week 4
