# models/contacts.js
@@ -1,0 +1,17 @@
+module.exports = (mongoose) => {
+    const Contact = mongoose.model(
+        'contacts',
+        mongoose.Schema(
+            {
+                firstName: String,
+                lastName: String,
+                email: String,
+                favoriteColor: String,
+                birthday: String,
+            },
+            { timestamps: true }
+        )
+    );
+  
+    return Contact;
+};
